--- a/MultiPlayerTest/Config/DefaultGame.ini
+++ b/MultiPlayerTest/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7F1D14CF446E59DC8DF1B0A74C86C115
 ProjectName=Third Person Game Template
+
+[/Script/Engine.GameSession]
+MaxPlayers=100
