--- a/MultiplayerProject/Config/DefaultEngine.ini
+++ b/MultiplayerProject/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/StartMap.StartMap
 EditorStartupMap=/Game/Map/StartMap.StartMap
+TransitionMap=/Game/Map/TransitionMap.TransitionMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
